maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:7: error: ')' expected but 'else' found.
def garM(c:Int):Int = { if (aMurD()) {if (estFaceMur()) {gauche();return c+1} else {avance();return c}} else {if (estFaceMur() {gauche();return c+1} else droite();avance();return c-1}
                                                                                                                                                     ^